--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@trpc/next": "^9.23.2",
     "@trpc/react": "^9.23.2",
     "@trpc/server": "^9.23.2",
+    "ethers": "^5.6.4",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
