--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@trpc/react": "^9.23.2",
     "@trpc/server": "^9.23.2",
     "ethers": "^5.6.4",
+    "gridjs": "^5.0.2",
+    "gridjs-react": "^5.0.2",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
